--- a/css/subpage-styles.css
+++ b/css/subpage-styles.css
@@ -80,13 +80,14 @@
     font-size: 1.25rem;
     text-align: center;
     font-weight: 400;
+    display: flex;
+    align-items: center;
     font-family: 'Englebert', sans-serif;
 }
 
 .filler-img {
     width: 35px;
     height: auto;
-    vertical-align: middle;
     margin-right: 30px;
     pointer-events: none;
 }
