--- a/css/subpage-styles.css
+++ b/css/subpage-styles.css
@@ -83,6 +83,11 @@
     display: flex;
     align-items: center;
     font-family: 'Englebert', sans-serif;
+    justify-content: center;
+}
+
+.filler-text {
+    text-align: center;
 }
 
 .filler-img {
@@ -149,7 +154,10 @@
     font-family: "Montserrat", sans-serif;
     font-weight: bold;
     text-transform: uppercase;
-    font-size: 0.65rem;
+    font-size: 0.65rem; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .paragraph {
@@ -166,7 +174,7 @@
 }
 
 .paragraph-image {
-    width: 350px;
+    width: 275px;
     border-radius: 15px;
 }
 
