--- a/css/subpage-styles.css
+++ b/css/subpage-styles.css
@@ -267,18 +267,18 @@
 .newsletter-btn::after {
     content: "";
     position: absolute;
-    top: -4px;
-    left: calc(-100% - 32px);
-    width: calc(100% + 2px);
-    height: calc(100% + 4px);
+    top: -1px;
+    left: -198px;
+    width: 200px;
+    height: 200px;
     background-color: #F26E11;
-    transition: transform .6s cubic-bezier(.6, 2.2, .6, -0.2);
+    transition: transform .6s cubic-bezier(.6, 2.1, .6, -0.2);
     z-index: -2;
     padding: 10px 15px;
 }
 
 .newsletter-btn:hover::after {
-    transform: translateX(calc(100% - 20px));
+    transform: translateX(198px);
 }
 
 .newsletter-btn:hover {
