--- a/css/subpage-styles.css
+++ b/css/subpage-styles.css
@@ -268,9 +268,9 @@
     content: "";
     position: absolute;
     top: -1px;
-    left: -198px;
-    width: 200px;
-    height: 200px;
+    left: calc(100% - 32px);
+    width: calc(100% + 4px);
+    height: calc(100px + 4px);
     background-color: #F26E11;
     transition: transform .6s cubic-bezier(.6, 2.1, .6, -0.2);
     z-index: -2;
@@ -278,7 +278,7 @@
 }
 
 .newsletter-btn:hover::after {
-    transform: translateX(198px);
+    transform: translateX(100% - 4px);
 }
 
 .newsletter-btn:hover {
