--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,11 @@ html {
     z-index: 50;
 }
 
+.inactive-navigation-item {
+    padding: 12.5px 17.5px;
+    user-select: none;
+}
+
 .navigation-item,
 .navigation-subpage-item {
     padding: 12.5px 17.5px;
