--- a/css/subpage-styles.css
+++ b/css/subpage-styles.css
@@ -426,7 +426,10 @@
         transform: translateY(-35px);
     }
     .newsletter-btn {
-        line-height:1.2;
+        line-height:1.3;
+    }
+    .email-form {
+        line-height:1.3;
     }
 }
 
