Fixing curse text in the logo

--- a/css/main.css
+++ b/css/main.css
@@ -399,6 +399,9 @@ html {
     .navigation-item:hover {
         text-shadow: none;
     }
+    .logo{
+        line-height:1;
+    }
 }
 
 @media(max-width:600px) {
