Fixing curse text in the submit button

--- a/css/main.css
+++ b/css/main.css
@@ -399,8 +399,13 @@ html {
     .navigation-item:hover {
         text-shadow: none;
     }
+    
     .logo{
         line-height:1;
+    }
+    
+    .form-button{
+        line-height:1.3;
     }
 }
 
