--- a/css/subpage-styles.css
+++ b/css/subpage-styles.css
@@ -426,10 +426,10 @@
         transform: translateY(-35px);
     }
     .newsletter-btn {
-        line-height:1.3;
+        padding-top:15px;
     }
     .email-form {
-        line-height:1.3;
+        line-height:180%;
     }
 }
 
