--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,7 @@ html {
 .navigation-item,
 .navigation-subpage-item {
     font-family:"Montserrat","sans-serif";
+    font-weight:600;
     padding: 12.5px 17.5px;
     user-select: none;
     transition: .5s all ease;
