Research problem with input email #3

--- a/css/subpage-styles.css
+++ b/css/subpage-styles.css
@@ -427,6 +427,10 @@
     .newsletter-btn {
         padding-top:13px;
     }
+    
+    .newsletter-email {
+        height: 75px;
+    }
 }
 
 @media(max-width:650px) {
