Correction of the inactive button's styling

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,13 @@
+/* ? Inactive Menu Item */
+
+#inactive {
+    cursor: not-allowed;
+}
+
+#inactive:hover {
+    text-shadow: none;
+}
+
 /* ? Landing Page */
 
 .landing-page {
