--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,7 @@ html {
     font-family: "Englebert", sans-serif;
     font-size: 2rem;
     font-weight: 900;
+    margin-left:5px;
 }
 .fa-atlas {
     font-weight: 900;
