--- a/css/main.css
+++ b/css/main.css
@@ -398,6 +398,9 @@ html {
     .navigation-item:hover {
         text-shadow: none;
     }
+    .logo-name{
+     padding-top:5px;   
+    }
     .fa-atlas{
         line-height:100%;
     }
