--- a/css/main.css
+++ b/css/main.css
@@ -399,7 +399,8 @@ html {
         text-shadow: none;
     }
     .logo-name{
-     padding-top:5px;   
+        padding-top:5px;  
+        margin-left:7px;
     }
     .fa-atlas{
         line-height:100%;
