--- a/css/index.css
+++ b/css/index.css
@@ -223,13 +223,14 @@
 
 .illustration-question {
     align-self: center;
-    width: 300px;
+    width: 325px;
     height: auto;
     font-size: 1.25rem;
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
     color: #FFFFFF;
     pointer-events: none;
+    margin-left: 50px;
 }
 
 .form-button {
