Centering button vertically

--- a/css/subpage-styles.css
+++ b/css/subpage-styles.css
@@ -55,7 +55,7 @@
     align-items: center;
     background: #014C78;
     border-radius: 25px;
-    padding: 12.5px 30px;
+    padding: 17.5px 30px 12.5px 30px;
     font-family: 'Englebert', sans-serif;
     color: #E9EAE9;
     font-size: 1.15rem;
