--- a/css/main.css
+++ b/css/main.css
@@ -189,6 +189,11 @@ html {
 }
 
 /* ? Media Queries */
+@media(max-width:1300px) {
+    .form{
+       width:70vw;
+    }
+}
 
 @media(max-width:1100px) {
     html {
@@ -209,7 +214,7 @@ html {
     }
 
     .form {
-        width: 70vw;
+        width: 80vw;
     }
 }
 
@@ -231,7 +236,7 @@ html {
     }
 
     .form {
-        width: 75vw;
+        width:85vw;
         padding-right: 0;
     }
 
@@ -260,7 +265,7 @@ html {
     }
 
     .form {
-        width: 80vw;
+        width: 90vw;
     }
 
 }
